.\fix(agendamento): substituir MapStruct por método manual toDTO() para corrigir ambiguidade do id
- Removido uso do MapStruct para conversão de AppointmentEntity → AppointmentDTO
- Adicionado método manual toDTO() dentro do AppointmentService
- Corrigido mapeamento de id, clientId, professionalId, serviceId e demais campos
- Resolve o erro'